add msix compatibility using .appinstaller as parameter.

--- a/MsixCore/ClickOnceWrapper/msixmgrClickOnceWrapper.csproj
+++ b/MsixCore/ClickOnceWrapper/msixmgrClickOnceWrapper.csproj
@@ -58,10 +58,11 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>06A49B3AA3759805C0B0C9A8CDD0D0069254B07E</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>F5507360D088FCE3ABDAAE4CBCAF6B7AD8E1FBF2</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>msixmgrClickOnceWrapper_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>
+    </ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -146,7 +147,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="msixmgrClickOnceWrapper_TemporaryKey.pfx" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
